<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- globals -->
    <string name="app_name">Measure distance</string>
    <string name="action_settings">Settings</string>
    
    <!-- titles -->
    <string name="title_first_location">First location</string>
    <string name="title_second_location">Second location</string>
    
    <!-- coordinates -->
    <string name="longtitude">Longitude: </string>
	<string name="latitude">Latitude: </string>
	<string name="Altitude">Altitude: </string>
	<string name="City">Addresse: </string>
	
	<!-- input descriptions -->
	<string name="distance">Distance: </string>
	
	<!-- buttons -->
	<string name="button_fetch_location">Use current location</string>
	
	<!-- messages -->
	<string name="toast_accuracy">Accuracy of coordinate is: </string>
	<string name="toast_unable_to_determine_city">Unable to determine city: </string>
	
	<!-- gps info -->
	<string name="accuracy">Accuracy: </string>
	<string name="provider">Provider: </string>
	<string name="updated">Last update: </string>
	<string name="satellites">Satellites: </string>
	
	<!-- drawer button -->
	<string name="drawer_open">Open GPS info</string>
	<string name="drawer_close">Close GPS info</string>
	
</resources>
