<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/drawer"
    android:background="#111"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/loc1lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_toRightOf="@+id/textView3"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="14dp"
        android:text="@string/title_first_location"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/loc1long"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loc1lat"
        android:layout_below="@+id/loc1lat"
        android:ems="10"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/loc2long"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loc2lat"
        android:layout_below="@+id/loc2lat"
        android:ems="10"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/loc2alt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loc2long"
        android:layout_below="@+id/loc2long"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loc1long"
        android:layout_alignBottom="@+id/loc1long"
        android:layout_toLeftOf="@+id/loc1long"
        android:text="@string/longtitude"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loc1lat"
        android:layout_alignBottom="@+id/loc1lat"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/latitude"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loc1alt"
        android:layout_alignBottom="@+id/loc1alt"
        android:layout_toLeftOf="@+id/loc1alt"
        android:text="@string/Altitude"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loc2lat"
        android:layout_alignBottom="@+id/loc2lat"
        android:layout_alignLeft="@+id/textView5"
        android:text="@string/latitude"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loc2alt"
        android:layout_alignBottom="@+id/loc2alt"
        android:layout_alignRight="@+id/TextView02"
        android:text="@string/Altitude"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loc2long"
        android:layout_alignBottom="@+id/loc2long"
        android:layout_alignRight="@+id/TextView02"
        android:text="@string/longtitude"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/loc2get"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_alignRight="@+id/loc2alt"
        android:layout_below="@+id/loc2alt"
        android:text="@string/button_fetch_location"
        android:onClick="fetchLocation" />

    <Button
        android:id="@+id/loc1get"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignRight="@+id/loc1alt"
        android:layout_below="@+id/loc1alt"
        android:text="@string/button_fetch_location"
        android:onClick="fetchLocation" />

    <EditText
        android:id="@+id/loc1alt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/loc1long"
        android:layout_below="@+id/loc1long"
        android:ems="10"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/loc2get"
        android:layout_below="@+id/loc2get"
        android:ems="10"
        android:enabled="false"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/distance"
        android:layout_alignBottom="@+id/distance"
        android:layout_alignRight="@+id/textView5"
        android:text="@string/distance"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/loc1get"
        android:text="@string/title_second_location"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/loc2lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/loc1get"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:inputType="numberDecimal" />

</RelativeLayout>